--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Yasak Bölge Girilmez !</title>
 <meta name="description" content="Orta Doğu Ve Balkanların Alkışlarla Yaşayan Tek Sitesi !">
 <meta name="keywords" content="alkışlarla,yaşıyorum,video,videolar,video izle">
-<link rel="shortcut icon" href="http://alkislarlayasiyorum.rf.gd/images/fav.ico">
+<link rel="shortcut icon" href="fav.ico">
 <style type="text/css">
             p {
                 margin: 0;
@@ -152,7 +152,7 @@
 <div id="overlay" class="overlay">
 <div class="overlay-body">
 <center>
-<img src="http://alkislarlayasiyorum.rf.gd/images/scare.jpg">
+<img src="scare.jpg">
 <center>
 <p class="overlay-title">UYARI:Tehlikeli Sularda Yüzüyorsun</p>
 <p class="overlay-description">Bu web sitesinin bu bölümünde yanıp sönen ışıklar veya desenler dâhil, belirli görsel görüntülere maruz kaldıklarında epilepsi hastaları  epilepsi nöbeti geçirebilirler .</p>
@@ -163,7 +163,7 @@
 </div>
 </div>
 <div class="scare">
-<video id="video" class="video" src="http://alkislarlayasiyorum.rf.gd/images/video.mp4" loop></video>
+<video id="video" class="video" src="video.mp4" loop></video>
 </div>
 <script type="text/javascript">
             const video = document.getElementById("video");
