--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <div id="overlay" class="overlay">
 <div class="overlay-body">
 <center>
-<img src="scare.png>
+<img src="scare.png">
 <center>
 <p class="overlay-title">UYARI:Tehlikeli Sularda Yüzüyorsun</p>
 <p class="overlay-description">Bu web sitesinin bu bölümünde yanıp sönen ışıklar veya desenler dâhil, belirli görsel görüntülere maruz kaldıklarında epilepsi hastaları  epilepsi nöbeti geçirebilirler .</p>
